--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="postcard-header">
 				<h1>My Postcard</h1>
 				<img
-					src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png"
+					src=""http://cdn.akc.org/content/hero/dachshundDYK.jpg""
 					alt="4Geeks"
 				/>
 			</div>
